API_gateway/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend-route
  namespace: default #the namespace where the svc is made 
spec:
  parentRefs:
  - name: nginx-gateway #the nginx gateway name 
    namespace: nginx-gateway #the nginx gateway ns
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: frontend-svc #refernce to the svc
      port: 80
